# teds

./: .gitignore  .mypy.ini  .readthedocs.yaml  CMakeLists.txt  Readme.md  bitbucket-pipelines.yml  build_cpp.sh  clang_format_check.sh  conftest.py  flake8_check.sh  initial_cache.cmake  mypy_check.sh  project_version.txt  pyproject.toml  requirements.txt  setup.py
cpp/bindings/: CMakeLists.txt  bindings.cpp  convert.cpp  convert.h  drivers.cpp  drivers.h  geolocate.cpp  geolocate.h  init.h  radiative_transfer.cpp  radiative_transfer.h  solar_model.cpp  solar_model.h
cpp/bindings/teds_cpp/: bindings.pyi
cpp/common/: CMakeLists.txt  algorithm.cpp  algorithm.h  b_spline.cpp  b_spline.h  b_spline_2d.cpp  b_spline_2d.h  binning_table.cpp  binning_table.h  ckd.cpp  ckd.h  constants.h  cubic_spline.cpp  cubic_spline.h  dem.cpp  eigen.h  fourier.cpp  fourier.h  geometry.cpp  geometry.h  io.cpp  io.h  isrf.cpp  isrf.h  l1.h  l2.cpp  l2.h  linalg.cpp  linalg.h  linear_spline.cpp  linear_spline.h  quaternion.cpp  quaternion.h  setting.h  settings.cpp  settings.h  solar_model.cpp  solar_model.h  time.h  timer.h  (+2 more)
cpp/im/: CMakeLists.txt  driver.cpp  driver_im.cpp  driver_im.h  forward_models.cpp  forward_models.h  main.cpp  settings_im.cpp  settings_im.h
cpp/l1al1b/: CMakeLists.txt  calibration.cpp  calibration.h  driver.cpp  driver_l1b.cpp  driver_l1b.h  main.cpp  settings_l1b.cpp  settings_l1b.h
cpp/l1l2/: CMakeLists.txt  atmosphere.cpp  atmosphere.h  driver.cpp  driver.h  driver_l2.cpp  driver_l2.h  gauss_newton.cpp  gauss_newton.h  main.cpp  nonscat_fwd_model.cpp  nonscat_fwd_model.h  optic_abs_prop.cpp  optic_abs_prop.h  read_sun_spectrum.cpp  read_sun_spectrum.h  ref_profiles.h  settings_l2.cpp  settings_l2.h  surface.cpp  surface.h
examples/exp3_rad_offset_gain/: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  dev-requirements.txt  exp3.0_rad_offset.ipynb  mypy.ini  pyproject.toml  radiance_offset.py  requirements.txt  tox.ini
examples/exp3_rad_offset_gain/integration/: nc_generator.py  sample_l1b.nc  test_container.sh  test_docker.sh
examples/exp3_rad_offset_gain/notebooks/: exp3.0_rad_offset.ipynb
examples/exp3_rad_offset_gain/notebooks/settings/: sgmrad_config.yaml  siml1b_config.yaml
examples/exp3_rad_offset_gain/settings/: gm_config.yaml  l1bl2_config.yaml  sgmgeo_config.yaml  siml1b_config.yaml
examples/exp3_rad_offset_gain/src/rad_offset_gain/: __init__.py  cli.py  lib.py
examples/exp3_rad_offset_gain/tests/: test_cli.py  test_lib.py
teds/IM/tango_ckd_model/SRC/: CMakeLists.txt  ckd.cpp  ckd.h  cubic_spline.cpp  fourier.cpp  frame.cpp  functions.cpp  git.h.in  l1x.h  linear_spline.h  logger.h  main.cpp  netcdf_object.cpp  netcdf_object.h  program.cpp  program.h  settings.h  settings_geo.cpp  settings_main.cpp  settings_main.h  settings_noise.cpp  utc.cpp
teds/IM/tango_im/: CMakeLists.txt  driver.cpp  initial_cache.cmake  initial_cache.cmake.example  initial_cache_knmi.cmake  settings_im.h
teds/IM/tango_im/tango_im/: CMakeLists.txt  binningtable.cpp  binningtable.h  bspline.cpp  bspline.h  (+47 more)
teds/L1AL1B/tango_l1b/: CMakeLists.txt  fourier.cpp  initial_cache.cmake  initial_cache.cmake.example  initial_cache_knmi.cmake  l1.h  yaml.cpp
teds/im/: CMakeLists.txt  __init__.py  __init__sron.py  create_im_configuration_file_nitro.py  default_config.yaml  forward_models.py  initial_cache.cmake  instrument_model.py  io.py  types.py
teds/im/Python/: comparison.py  datasets.py  instrument_model.py
teds/im/python/: default_config.yaml  forward_models.py  instrument_model.py  uncalibration.py
teds/im/python_sron/: instrument_model.py
teds/im/tango_im/: CMakeLists.txt  driver.cpp  driver_nitro.cpp  driver_nitro.h  forward_models.cpp  forward_models.h  isrf.cpp  isrf.h  main.cpp  settings_im.cpp  settings_im.h  uncalibration.cpp
teds/l1al1b/: CMakeLists.txt  __init__.py  __init__sron.py  calibration.py  default_config.yaml  geolocate.py  interpolate_navigation_data.py  io.py  l1al1b.py  solar_model.py  types.py
teds/l1al1b/Python/: l1b_processor.py
teds/l1al1b/cmake/: Tools.cmake
teds/l1al1b/python/: binning.py  calibration.py  default_config.yaml  geolocate.py  geolocation.cpp  geolocation.pyi  interpolate_navigation_data.py  io.py  l1al1b.py  l1b_processor.py  l1b_types.py  solar_model.py  types.py
teds/l1al1b/python_sron/: calibration.py  io.py  types.py
teds/l1al1b/tango_l1b/: CMakeLists.txt  algorithm.cpp  b_spline.cpp  b_spline.h  b_spline_2d.cpp  b_spline_2d.h  base_algo.cpp  base_algo.h  binning_table.cpp  binning_table.h  build_algo.h  calibration.cpp  calibration.h  ckd.cpp  ckd.h  constants.h  cubic_spline.cpp  cubic_spline.h  datasets.h  dem.cpp  dem.h  driver.cpp  driver_nitro.cpp  driver_nitro.h  dummy_correction.cpp  dummy_correction.h  geometry.cpp  io.cpp  io.h  io_nitro.cpp  io_nitro.h  l1.cpp  l1.h  l1_measurement.cpp  l1_measurement.h  linalg.cpp  linalg.h  linear_spline.cpp  linear_spline.h  main.cpp  (+12 more)
tests/: CMakeLists.txt  conftest.py
tests/common/: ckd_conversion_gain.txt  ckd_dark_current.txt  ckd_dark_offset.txt  ckd_nonlin.txt  ckd_pixel_mask.txt  ckd_prnu.txt  ckd_radiometric.txt  ckd_read_noise.txt  ckd_spectral.txt  ckd_stray_kernel.txt  ckd_swath_act_angle.txt  ckd_swath_act_map.txt  ckd_swath_col_map.txt  ckd_swath_los.txt  ckd_swath_row_map.txt  ckd_swath_wavelength_map.txt  detector_image.txt  l1b_radiance.txt  l1b_radiance_stdev.txt  l1b_wavelengths.txt  navigation_att_quat.txt  navigation_orb_pos.txt  navigation_time.txt  prof.AFGL.US.std
tests/cpp/: testing.h
tests/cpp/im/: CMakeLists.txt  integration.cpp  unit.cpp
tests/cpp/l1al1b/: CMakeLists.txt  integration.cpp  unit.cpp
tests/im/c++/: CMakeLists.txt  integration.cpp  unit.cpp
tests/im/python/: test_im.py  test_im_integration.py  test_im_unit.py
tests/l1al1b/c++/: CMakeLists.txt  integration.cpp  testing.h  unit.cpp
tests/l1al1b/python/: test_l1b.py  test_l1b_integration.py  test_l1b_unit.py
tests/python/im/: test_im_integration.py  test_im_unit.py
tests/python/l1al1b/: test_l1b_unit.py
tests/sgm/: test_geoscene.py
(+786 files in other folders)
